Fixed NaN #2 && Add Styles for Desktop

--- a/src/components/NumberPeople/NumberPeople.scss
+++ b/src/components/NumberPeople/NumberPeople.scss
@@ -3,6 +3,10 @@
 .NumberPeople {
   margin-bottom: 32px;
 
+  @include breakpoint(sm) {
+    margin-bottom: 0;
+  }
+
   &-label {
     display: block;
     font-weight: 700;
