--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,14 @@
 @import './scss/mixins';
 
 .App {
-  height: 100vh;
-  text-align: center;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
   background-color: var(--light-grayish-cyan);
+
+  @include breakpoint(sm) {
+    height: 100vh;
+  }
 
   input {
     font-size: em(24);
@@ -21,6 +26,14 @@
     padding-right: 20px;
   }
 
+  input::placeholder {
+    color: var(--dark-grayish-cyan);
+  }
+
+  button {
+    cursor: pointer;
+  }
+
   &-logo {
     margin: 50px 0 40px 0;
     pointer-events: none;
@@ -28,23 +41,42 @@
 
   &-header {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
   }
 
   &-container {
+    display: flex;
+    flex-flow: column wrap;
     margin: 0 auto;
     padding: 32px;
     border-radius: 30px 30px 0 0;
     background-color: var(--white);
 
     @include breakpoint(sm) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: 'inputs totals';
+      gap: 0 32px;
       border-radius: 30px;
+    }
+
+    @include breakpoint(md) {
       max-width: 920px;
       max-height: 480px;
+    }
+  }
+
+  &-inputs {
+    @include breakpoint(sm) {
+      grid-area: inputs;
+      padding: 18px 0;
+    }
+  }
+
+  &-totals {
+    @include breakpoint(sm) {
+      grid-area: totals;
     }
   }
 }
