--- a/src/components/TotalAmount/TotalAmount.scss
+++ b/src/components/TotalAmount/TotalAmount.scss
@@ -3,29 +3,52 @@
 .TotalAmount {
   display: flex;
   flex-flow: column wrap;
-  justify-content: space-between;
-  font-weight: 700;
+  justify-content: flex-start;
+  height: 100%;
   background-color: var(--very-dark-cyan);
   border-radius: 15px;
-  padding: 24px;
+  padding: 38px 24px 24px 24px;
+
+  @include breakpoint(md) {
+    padding: 40px;
+  }
 
   .amounts {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 36px;
     color: var(--white);
+    font-weight: 700;
+
+    .tip-amount,
+    .total-amount {
+      display: block;
+    }
+
+    .person {
+      display: block;
+      margin-top: 5px;
+      font-size: 14px;
+      color: var(--dark-grayish-cyan);
+    }
 
     .value {
+      text-align: right;
       color: var(--strong-cyan);
       font-size: em(30);
+
+      @include breakpoint(md) {
+        font-size: em(50);
+      }
     }
   }
 
   .reset-btn {
+    margin-top: auto;
     text-transform: uppercase;
-    font-size: em(24);
+    font-size: em(22);
     font-weight: 700;
     height: 48px;
     background-color: var(--strong-cyan);
@@ -33,8 +56,9 @@
     border-radius: 6px;
     border: none;
 
-    &.disabled {
+    &:disabled {
       background-color: var(--very-dark-cyan-disabled);
+      cursor: not-allowed;
     }
   }
 }
