--- a/src/components/NumberPeople/NumberPeople.scss
+++ b/src/components/NumberPeople/NumberPeople.scss
@@ -15,7 +15,7 @@
     color: var(--dark-grayish-cyan);
     margin-bottom: 10px;
   }
-  input {
+  .input {
     background-image: url('./../../images/icon-person.svg');
   }
 }
