--- a/src/components/Bill/Bill.scss
+++ b/src/components/Bill/Bill.scss
@@ -7,7 +7,7 @@
     width: 100%;
     margin-bottom: 39px;
 
-    input {
+    .input {
       background-image: url('./../../images/icon-dollar.svg');
     }
   }
