--- a/src/components/SelectTip/SelectTip.scss
+++ b/src/components/SelectTip/SelectTip.scss
@@ -40,7 +40,7 @@
 
     &:hover {
       color: var(--very-dark-cyan);
-      background-color: var(--strong-cyan);
+      background-color: var(--light-strong-cyan);
     }
   }
 
