--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  align-items: center;
   background-color: var(--light-grayish-cyan);
 
   @include breakpoint(sm) {
@@ -12,7 +13,7 @@
   .attribution {
     font-size: 11px;
     text-align: center;
-    padding-top: 30px;
+    padding: 30px;
     font-size: em(16);
   }
   .attribution a {
@@ -35,7 +36,9 @@
     padding-right: 20px;
 
     &:focus {
-      outline-color: var(--strong-cyan);
+      outline: none;
+      box-shadow: 0 0 0 2px hsl(172, 67%, 45%);
+      //outline-color: var(--strong-cyan);
     }
   }
 
@@ -48,25 +51,25 @@
   }
 
   &-logo {
-    margin: 50px 0 40px 0;
     pointer-events: none;
-
-    @include breakpoint(sm) {
-      margin: 0 0 90px 0;
-    }
   }
 
   &-header {
     display: flex;
     justify-content: center;
+    margin: 50px 0 40px 0;
+
+    @include breakpoint(sm) {
+      margin: 88px 0;
+    }
   }
 
   &-container {
     display: flex;
     flex-flow: column wrap;
     margin: 0 auto;
-    padding: 32px;
-    border-radius: 30px 30px 0 0;
+    padding: 38px 24px 32px 24px;
+    border-radius: 25px 25px 0 0;
     background-color: var(--white);
 
     @include breakpoint(sm) {
@@ -74,20 +77,23 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
       grid-template-areas: 'inputs totals';
-      gap: 0 32px;
-      border-radius: 30px;
+      gap: 0 48px;
+      border-radius: 25px;
+      padding: 32px 32px 32px 48px;
+      box-shadow: 0px 11px 15px 10px rgba(0, 0, 0, 0.05);
     }
 
-    @include breakpoint(md) {
+    @include breakpoint(lg) {
       max-width: 920px;
-      max-height: 480px;
+      //max-height: 480px;
     }
   }
 
   &-inputs {
+    padding: 0 8px;
     @include breakpoint(sm) {
       grid-area: inputs;
-      padding: 18px 0;
+      padding: 16px 0;
     }
   }
 
@@ -95,5 +101,11 @@
     @include breakpoint(sm) {
       grid-area: totals;
     }
+  }
+}
+
+@media screen and (max-height: 799px) {
+  .App {
+    justify-content: space-between;
   }
 }
