--- a/src/components/NumberPeople/NumberPeople.scss
+++ b/src/components/NumberPeople/NumberPeople.scss
@@ -7,15 +7,43 @@
     margin-bottom: 0;
   }
 
+  &-labels {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+  }
+
   &-label {
-    display: block;
+    display: inline-block;
     font-weight: 700;
     font-size: em(16);
     text-align: left;
     color: var(--dark-grayish-cyan);
-    margin-bottom: 10px;
+    margin-bottom: 12px;
+
+    &.helper {
+      display: none;
+
+      right: 0;
+
+      &.warning {
+        display: inline-block;
+        color: hsl(7, 73%, 65%);
+      }
+    }
   }
   .input {
     background-image: url('./../../images/icon-person.svg');
+
+    &.warning {
+      outline-color: hsl(7, 73%, 65%);
+      box-shadow: 0 0 0 2px hsl(7, 73%, 65%);
+    }
+
+    &:focus.warning {
+      outline-color: hsl(7, 73%, 65%);
+    }
   }
 }
