--- a/src/components/SelectTip/SelectTip.scss
+++ b/src/components/SelectTip/SelectTip.scss
@@ -1,9 +1,16 @@
 @import './../../scss/mixins';
 
 .SelectTip {
-  margin-bottom: 39px;
+  margin-bottom: 38px;
+
+  @include breakpoint(sm) {
+    margin-bottom: 46px;
+  }
 
   .input {
+    padding-left: 15px;
+    padding-right: 15px;
+
     @include breakpoint(sm) {
       text-align: center;
       padding: 0;
@@ -15,14 +22,13 @@
     font-size: em(16);
     text-align: left;
     color: var(--dark-grayish-cyan);
-    margin-bottom: 22px;
+    margin: 0 0 21px 0;
   }
   &-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 16px;
-    grid-row-gap: 16px;
+    gap: 16px;
 
     @include breakpoint(md) {
       grid-template-columns: repeat(3, 1fr);
@@ -31,6 +37,7 @@
   }
 
   &-btn {
+    min-height: 48px;
     font-size: em(24);
     font-weight: 700;
     color: var(--white);
